[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrsch"
version = "0.0.1"
authors = [
  { name="btmxh" },
]
description = "Python utilities for rapid research development"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/btmxh/pyrsch"
Issues = "https://github.com/btmxh/pyrsch/issues"

